[package]
name = "pest-wdl-1"
description = "WDL 1.x grammar for the pest parsing library"
version = "0.1.7"
keywords = ["parsing", "wdl"]
categories = ["parsing"]
repository = "https://github.com/jdidion/pest-wdl"
edition = "2018"
license = "MIT"

[dependencies]
pest = "2.5.2"
pest_derive = "2.5.2"

[dev-dependencies]
criterion = "0.4.0"
lazy_static = "1.4.0"
pest-test = { version = "0.1.5", path = "../pest-test/pest-test/" }
pest-test-gen = { version = "0.1.6", path = "../pest-test/pest-test-gen" }

[[bench]]
name = "parser"
harness = false